--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "nuxt": "^3.11.2",
     "sass": "^1.77.4",
+    "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vuetify": "^3.6.0-beta.0.0"
