--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.11.2",
     "sass": "^1.77.4",
-    "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2",
-    "vuetify": "^3.6.0-beta.0.0"
+    "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.6.8"
   }
 }
