--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "prettier": "^3.3.1",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.6.8"
   }
